# git-profiles

./: .gitignore  CMakeLists.txt  README.md  config.h.in  git-profiles.qrc
debian/: README  changelog  control
src/: main.cpp  window.cpp  window.h
